--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -30,3 +30,20 @@ jobs:
         with:
           name: jdk17-test-results
           path: "**/target/*-reports*/**/TEST-*.xml"
+
+  image:
+    uses: ryanemerson/db-syncer/.github/workflows/build-image.yaml@gh_action_image_build
+
+  use-image:
+    needs: call-reusable-workflow
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          # TODO can we use the output of the image job to ascertain this?
+          name: db-syncer
+          path: /tmp
+
+      - name: Load image
+        run: docker load --input /tmp/db-syncer.tar
