--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -1,11 +1,11 @@
-name: Publish dev images to quay.io
+name: Build db-syncer Image
 
 on:
   workflow_call:
     inputs:
-      tag:
+      git-ref:
         type: string
-        default: quay.io/gingersnap/db-syncer:latest
+        default: ${{ github.ref }}
 
 jobs:
   upload:
@@ -13,6 +13,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ inputs.git-ref }}
 
       - name: Setup Java
         uses: actions/setup-java@v3
@@ -31,7 +33,7 @@ jobs:
         with:
           context: .
           file: src/main/docker/Dockerfile.jvm
-          tags: ${{ inputs.tag }}
+          tags: quay.io/gingersnap/db-syncer:latest
           outputs: type=docker,dest=/tmp/db-syncer.tar
 
       - name: Upload artifact
