--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -31,20 +31,5 @@ jobs:
           name: jdk17-test-results
           path: "**/target/*-reports*/**/TEST-*.xml"
 
-  image:
-#    uses: ryanemerson/gingersnap-test/.github/workflows/e2e.yaml@main
-    uses: ./.github/workflows/build-image.yaml
-
-  use-image:
-    needs: image
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          # TODO can we use the output of the image job to ascertain this?
-          name: db-syncer
-          path: /tmp
-
-      - name: Load image
-        run: docker load --input /tmp/db-syncer.tar
+  e2e:
+    uses: ryanemerson/gingersnap-test/.github/workflows/e2e.yaml@main
