--- a/.github/workflows/publish-dev-images.yaml
+++ b/.github/workflows/publish-dev-images.yaml
@@ -16,10 +16,6 @@ jobs:
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v3
-        with:
-          # TODO can we use the output of the image job to ascertain this?
-          name: db-syncer
-          path: /tmp
 
       - name: Login to Quay
         uses: docker/login-action@v2
@@ -31,5 +27,5 @@ jobs:
       - name: Load and Push image
         # Use same tag value as passed to image job
         run: |
-          docker load --input /tmp/db-syncer.tar
+          docker load --input ${{ needs.image.outputs.image-name }}
           docker push quay.io/gingersnap/db-syncer:latest
