--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -9,27 +9,27 @@ on:
       - main
 
 jobs:
-  jdk17:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup Java
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
-
-      - name: JDK 17 Tests
-        run: mvn -B verify -Dmaven.test.failure.ignore=true -Dansi.strip=true
-
-      - name: Test Logs
-        uses: actions/upload-artifact@v3
-        if: success() || failure()
-        with:
-          name: jdk17-test-results
-          path: "**/target/*-reports*/**/TEST-*.xml"
+#  jdk17:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#
+#      - name: Setup Java
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '17'
+#          distribution: 'temurin'
+#          cache: maven
+#
+#      - name: JDK 17 Tests
+#        run: mvn -B verify -Dmaven.test.failure.ignore=true -Dansi.strip=true
+#
+#      - name: Test Logs
+#        uses: actions/upload-artifact@v3
+#        if: success() || failure()
+#        with:
+#          name: jdk17-test-results
+#          path: "**/target/*-reports*/**/TEST-*.xml"
 
   e2e:
     uses: ryanemerson/gingersnap-test/.github/workflows/e2e.yaml@main
